; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-util.c_ff_codec_desc_long_name.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-util.c_ff_codec_desc_long_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_codec_desc = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ff_codec_desc_long_name(%struct.ff_codec_desc* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ff_codec_desc*, align 8
  store %struct.ff_codec_desc* %0, %struct.ff_codec_desc** %3, align 8
  %4 = load %struct.ff_codec_desc*, %struct.ff_codec_desc** %3, align 8
  %5 = icmp ne %struct.ff_codec_desc* %4, null
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load %struct.ff_codec_desc*, %struct.ff_codec_desc** %3, align 8
  %8 = getelementptr inbounds %struct.ff_codec_desc, %struct.ff_codec_desc* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  store i8* %9, i8** %2, align 8
  br label %11

10:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %11

11:                                               ; preds = %10, %6
  %12 = load i8*, i8** %2, align 8
  ret i8* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
